# fastapi-service-template

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d73fbd7db9f5_init.py
app/: main.py
app/api/: dependencies.py  examples.py  router.py
app/api/routes/: examples.py
app/api/schemas/: __init__.py  examples.py
app/business/: repositories.py  uow.py
app/business/usecases/: create_example.py
app/core/: errors.py  logging.py  middleware.py  settings.py
app/data/: db.py  uow_sql.py
app/data/models/: __init__.py  example.py
app/data/repositories_sql/: __init__.py  example_repo.py
scripts/: init_service.py
tests/: conftest.py  test_examples.py  test_health.py
